@@ -218,4 +218,23 @@ import edu.umd.cs.findbugs.annotations.DefaultAnnotation;
 import edu.umd.cs.findbugs.annotations.NonNull;
      ]]></code>
     </test-code>
+
+    <test-code>
+        <description>bug #254 False+ : UnusedImport with Javadoc @link</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.NoSuchElementException;
+
+public class Test {
+    /**
+     * {@link ArrayList#add(Object)}
+     * @see Collections
+     * @throws NoSuchElementException no such element
+     */
+    String[] getList() { }
+}
+        ]]></code>
+    </test-code>
 </test-data>
